--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,9 @@
     background-color: black;
     height: 25px;
     z-index: 1000;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #graph {
@@ -16,7 +19,7 @@ h5 {
     font-size: 20px;
     color: white;
     padding-left: 5px;
-    margin-top: 3px;
+    padding-top: 4px;
     font-family: 'Orbitron', sans-serif;
 }
 
@@ -29,4 +32,27 @@ h6 {
     position: absolute; 
     top:50%; 
     left:50%; 
+}
+
+input[type="text"]{
+    background-color: transparent;
+    border: 0px;
+    outline: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    width:100px;
+    color: white;
+    padding-bottom: 5px;
+    font-size: 12px;
+}
+
+#submit-search {
+    color: white;
+    background-color: transparent;
+    font-size: 12px;
+    font-family: 'Orbitron', sans-serif;
+    margin-right: 5px;
+    cursor: pointer;
+    border-radius: 10px;
 }
