--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,7 @@
 
 #graph {
     height: 900px;
+    background-color: white;
 }
 
 h5 {
@@ -21,6 +22,10 @@ h5 {
     padding-left: 5px;
     padding-top: 4px;
     font-family: 'Orbitron', sans-serif;
+}
+
+body {
+    background-color: white;
 }
 
 #loading-screen { 
@@ -32,6 +37,30 @@ h6 {
     position: absolute; 
     top:50%; 
     left:50%; 
+}
+
+#intro-back-graphic {
+    font-size: 60px;
+    color: gray;
+    font-family: 'Orbitron';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    background-color: lightgray;
+    border-radius: 20px;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    opacity: 0.7;
+    transition: 0.2s;
+}
+
+#intro-info {
+    float: right;
+    padding-top: 25px;
+    transition: 0.2s;
 }
 
 input[type="text"]{
@@ -56,3 +85,11 @@ input[type="text"]{
     cursor: pointer;
     border-radius: 10px;
 }
+
+.error-msg {
+    position: absolute;
+    right: 50px;
+    top: 30px;
+    font-size: 10px;
+}
+
