--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,30 @@
     align-items: center;
 }
 
+#bottom-bar {
+    position: fixed;
+    left: 0;
+    bottom: 0%;
+    width: 100%;
+    background-color: black;
+    height: 25px;
+    z-index: 1000;
+    display: inline-flex;
+    justify-content: right;
+}
+
+#name-tag {
+    color: white;
+    font-family: 'Orbitron';
+    padding-right: 5px;
+    padding-top: 3px;
+    transition: 1s;
+    cursor: pointer;
+}
+#name-tag:hover {
+    color: yellow;
+}
+
 #graph {
     height: 900px;
     background-color: white;
@@ -22,6 +46,7 @@ h5 {
     padding-left: 5px;
     padding-top: 4px;
     font-family: 'Orbitron', sans-serif;
+    cursor: default;
 }
 
 body {
@@ -36,7 +61,9 @@ h6 {
     align-content: center; 
     position: absolute; 
     top:50%; 
-    left:50%; 
+    left:50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
 }
 
 #intro-back-graphic {
@@ -55,12 +82,14 @@ h6 {
     padding-right: 5px;
     opacity: 0.7;
     transition: 0.2s;
+    cursor: default;
 }
 
 #intro-info {
     float: right;
     padding-top: 25px;
     transition: 0.2s;
+    font-size: 11px;
 }
 
 input[type="text"]{
